--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "devDependencies": {
     "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.7.0",
     "mocha": "^8.2.1"
   }
 }
